--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="map_api">AIzaSyBrbixXxMrq7H-dtgfAmw662tD-iS9gg5k</string>
+    <string name="intesestial_ads_token2">ca-app-pub-9121597440484968/1594590801</string>
+    <string name="intesestial_ads_token1">ca-app-pub-9121597440484968/3179560243</string>
+    <string name="test_ads">ca-app-pub-3940256099942544/1033173712</string>
+    <string name="admob_app_id">ca-app-pub-9121597440484968~7254111599</string>
 </resources>
